Fix image names and add alt attributes

--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
 
 <body>
     <header class="header">
-        <img class="header__logo" src="resources/images/header/logo.svg" alt="">
+        <img class="header__logo" src="resources/images/header/logo.svg" alt="Main logo">
         <a class="header__link" href="#">LOGIN FOR ADMIN</a>
         <h1 class="header__title">SAY HELLO TO PERFECT LINE!</h1>
         <button class="header__button">CONTACT US</button>
         <div class="header__logos">
-            <img src="resources/images/header/Group 158.svg" alt="">
-            <img src="resources/images/header/Group 159.svg" alt="">
+            <img src="resources/images/header/logo-blue.svg" alt="Blue logo">
+            <img src="resources/images/header/logo-purple.svg" alt="Purple logo">
         </div>
     </header>
     <main>
         <div class="about">
             <h2 class="about__title">ABOUT US</h2>
             <p class="about__subtitle">MAIN INFORMATION OF OUR COMPANY</p>
-            <img class="about__samples" src="resources/images/main/about-us/image 2.png" alt="">
+            <img class="about__samples" src="resources/images/main/about-us/samples.png" alt="Samples">
             <div class="about__actually-do">
                 <h3>WE ACTUALLY DO AMAZING WORKS</h3>
                 <p>We specialize in creating custom web design that are crafted to meet your brand, design and
@@ -40,12 +40,12 @@
             <h2 class="featured__title">FEATURED WORKS</h2>
             <p class="featured__subtitle">WE TURN IDEAS INTO CUSTOM WEBSITE SOLUTIONS THAT YOUR</p>
             <div class="featured__container">
-                <img src="resources/images/main/featured-works/5.png" alt="">
-                <img src="resources/images/main/featured-works/6.png" alt="">
-                <img src="resources/images/main/featured-works/9.png" alt="">
-                <img src="resources/images/main/featured-works/banner3.png" alt="">
-                <img src="resources/images/main/featured-works/home_dietitian_sectionbg_1.png" alt="">
-                <img src="resources/images/main/featured-works/work4.png" alt="">
+                <img src="resources/images/main/featured-works/cards.png" alt="Cards">
+                <img src="resources/images/main/featured-works/bottles.png" alt="Bottles">
+                <img src="resources/images/main/featured-works/price.png" alt="Price">
+                <img src="resources/images/main/featured-works/ice-cream.png" alt="Ice cream">
+                <img src="resources/images/main/featured-works/tea-bag.png" alt="Tea bag">
+                <img src="resources/images/main/featured-works/book.png" alt="Book">
             </div>
         </div>
         <div class="team">
@@ -53,128 +53,140 @@
             <p class="team__subtitle">WE ARE WEB DEVELOPMENT PROFESSIONALS WHO CREATE EXCLUSIVE SOFTWARE</p>
             <div class="team__container">
                 <div class="employee">
-                    <img src="resources/images/main/small-team/team_3_copy.png" alt="">
+                    <img src="resources/images/main/small-team/team-1.png" alt="Team 1">
                     <div class="employee__about">
                         <p class="employee__name">Name <span class="employee__position">Position</span></p>
                         <p class="employee__info">Info</p>
                         <ul class="employee__links">
                             <li>
-                                <a href="#"><img src="resources/images/main/small-team/facebook_icon.svg" alt=""></a>
+                                <a href="#"><img src="resources/images/main/small-team/icon-facebook.svg"
+                                        alt="Facebook"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="resources/images/main/small-team/twitter_icon.svg" alt=""></a>
+                                <a href="#"><img src="resources/images/main/small-team/icon-twitter.svg"
+                                        alt="Twitter"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="resources/images/main/small-team/site_icon.svg" alt=""></a>
+                                <a href="#"><img src="resources/images/main/small-team/icon-site.svg" alt="Site"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="resources/images/main/small-team/mail_icon.svg" alt=""></a>
+                                <a href="#"><img src="resources/images/main/small-team/icon-mail.svg" alt="Mail"></a>
                             </li>
                         </ul>
                     </div>
                 </div>
                 <div class="employee">
-                    <img src="resources/images/main/small-team/team_4.png" alt="">
+                    <img src="resources/images/main/small-team/team-2.png" alt="Team 2">
                     <div class="employee__about">
                         <p class="employee__name">AL RAYHAN <span class="employee__position">/ UI Designer</span></p>
                         <p class="employee__info">I'm an expert in Graphics, Website and can also develop sites in
                             WordPress, JQuery.</p>
                         <ul class="employee__links">
                             <li>
-                                <a href="#"><img src="resources/images/main/small-team/facebook_icon.svg" alt=""></a>
+                                <a href="#"><img src="resources/images/main/small-team/icon-facebook.svg"
+                                        alt="Facebook"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="resources/images/main/small-team/twitter_icon.svg" alt=""></a>
+                                <a href="#"><img src="resources/images/main/small-team/icon-twitter.svg"
+                                        alt="Twitter"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="resources/images/main/small-team/site_icon.svg" alt=""></a>
+                                <a href="#"><img src="resources/images/main/small-team/icon-site.svg" alt="Site"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="resources/images/main/small-team/mail_icon.svg" alt=""></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="employee">
-                    <img src="resources/images/main/small-team/3.png" alt="">
-                    <div class="employee__about">
-                        <p class="employee__name">Name <span class="employee__position">Position</span></p>
-                        <p class="employee__info">Info</p>
-                        <ul class="employee__links">
-                            <li>
-                                <a href="#"><img src="resources/images/main/small-team/facebook_icon.svg" alt=""></a>
-                            </li>
-                            <li>
-                                <a href="#"><img src="resources/images/main/small-team/twitter_icon.svg" alt=""></a>
-                            </li>
-                            <li>
-                                <a href="#"><img src="resources/images/main/small-team/site_icon.svg" alt=""></a>
-                            </li>
-                            <li>
-                                <a href="#"><img src="resources/images/main/small-team/mail_icon.svg" alt=""></a>
+                                <a href="#"><img src="resources/images/main/small-team/icon-mail.svg" alt="Mail"></a>
                             </li>
                         </ul>
                     </div>
                 </div>
                 <div class="employee">
-                    <img src="resources/images/main/small-team/team_1.png" alt="">
+                    <img src="resources/images/main/small-team/team-3.png" alt="Team 3">
                     <div class="employee__about">
                         <p class="employee__name">Name <span class="employee__position">Position</span></p>
                         <p class="employee__info">Info</p>
                         <ul class="employee__links">
                             <li>
-                                <a href="#"><img src="resources/images/main/small-team/facebook_icon.svg" alt=""></a>
+                                <a href="#"><img src="resources/images/main/small-team/icon-facebook.svg"
+                                        alt="Facebook"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="resources/images/main/small-team/twitter_icon.svg" alt=""></a>
+                                <a href="#"><img src="resources/images/main/small-team/icon-twitter.svg"
+                                        alt="Twitter"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="resources/images/main/small-team/site_icon.svg" alt=""></a>
+                                <a href="#"><img src="resources/images/main/small-team/icon-site.svg" alt="Site"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="resources/images/main/small-team/mail_icon.svg" alt=""></a>
+                                <a href="#"><img src="resources/images/main/small-team/icon-mail.svg" alt="Mail"></a>
                             </li>
                         </ul>
                     </div>
                 </div>
                 <div class="employee">
-                    <img src="resources/images/main/small-team/team_2.png" alt="">
+                    <img src="resources/images/main/small-team/team-4.png" alt="Team 4">
                     <div class="employee__about">
                         <p class="employee__name">Name <span class="employee__position">Position</span></p>
                         <p class="employee__info">Info</p>
                         <ul class="employee__links">
                             <li>
-                                <a href="#"><img src="resources/images/main/small-team/facebook_icon.svg" alt=""></a>
+                                <a href="#"><img src="resources/images/main/small-team/icon-facebook.svg"
+                                        alt="Facebook"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="resources/images/main/small-team/twitter_icon.svg" alt=""></a>
+                                <a href="#"><img src="resources/images/main/small-team/icon-twitter.svg"
+                                        alt="Twitter"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="resources/images/main/small-team/site_icon.svg" alt=""></a>
+                                <a href="#"><img src="resources/images/main/small-team/icon-site.svg" alt="Site"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="resources/images/main/small-team/mail_icon.svg" alt=""></a>
+                                <a href="#"><img src="resources/images/main/small-team/icon-mail.svg" alt="Mail"></a>
                             </li>
                         </ul>
                     </div>
                 </div>
                 <div class="employee">
-                    <img src="resources/images/main/small-team/team_3.png" alt="">
+                    <img src="resources/images/main/small-team/team-5.png" alt="Team 5">
                     <div class="employee__about">
                         <p class="employee__name">Name <span class="employee__position">Position</span></p>
                         <p class="employee__info">Info</p>
                         <ul class="employee__links">
                             <li>
-                                <a href="#"><img src="resources/images/main/small-team/facebook_icon.svg" alt=""></a>
+                                <a href="#"><img src="resources/images/main/small-team/icon-facebook.svg"
+                                        alt="Facebook"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="resources/images/main/small-team/twitter_icon.svg" alt=""></a>
+                                <a href="#"><img src="resources/images/main/small-team/icon-twitter.svg"
+                                        alt="Twitter"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="resources/images/main/small-team/site_icon.svg" alt=""></a>
+                                <a href="#"><img src="resources/images/main/small-team/icon-site.svg" alt="Site"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="resources/images/main/small-team/mail_icon.svg" alt=""></a>
+                                <a href="#"><img src="resources/images/main/small-team/icon-mail.svg" alt="Mail"></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="employee">
+                    <img src="resources/images/main/small-team/team-6.png" alt="Team 6">
+                    <div class="employee__about">
+                        <p class="employee__name">Name <span class="employee__position">Position</span></p>
+                        <p class="employee__info">Info</p>
+                        <ul class="employee__links">
+                            <li>
+                                <a href="#"><img src="resources/images/main/small-team/icon-facebook.svg"
+                                        alt="Facebook"></a>
+                            </li>
+                            <li>
+                                <a href="#"><img src="resources/images/main/small-team/icon-twitter.svg"
+                                        alt="Twitter"></a>
+                            </li>
+                            <li>
+                                <a href="#"><img src="resources/images/main/small-team/icon-site.svg" alt="Site"></a>
+                            </li>
+                            <li>
+                                <a href="#"><img src="resources/images/main/small-team/icon-mail.svg" alt="Mail"></a>
                             </li>
                         </ul>
                     </div>
