Update featured works container

--- a/index.html
+++ b/index.html
@@ -40,12 +40,24 @@
             <h2 class="featured__title">FEATURED WORKS</h2>
             <p class="featured__subtitle">WE TURN IDEAS INTO CUSTOM WEBSITE SOLUTIONS THAT YOUR</p>
             <div class="featured__container">
-                <img src="resources/images/main/featured-works/cards.png" alt="Cards">
-                <img src="resources/images/main/featured-works/bottles.png" alt="Bottles">
-                <img src="resources/images/main/featured-works/price.png" alt="Price">
-                <img src="resources/images/main/featured-works/ice-cream.png" alt="Ice cream">
-                <img src="resources/images/main/featured-works/tea-bag.png" alt="Tea bag">
-                <img src="resources/images/main/featured-works/book.png" alt="Book">
+                <div class="featured__demo">
+                    <img src="resources/images/main/featured-works/cards.png" alt="Cards">
+                </div>
+                <div class="featured__demo">
+                    <img src="resources/images/main/featured-works/bottles.png" alt="Bottles">
+                </div>
+                <div class="featured__demo">
+                    <img src="resources/images/main/featured-works/price.png" alt="Price">
+                </div>
+                <div class="featured__demo">
+                    <img src="resources/images/main/featured-works/ice-cream.png" alt="Ice cream">
+                </div>
+                <div class="featured__demo">
+                    <img src="resources/images/main/featured-works/tea-bag.png" alt="Tea bag">
+                </div>
+                <div class="featured__demo">
+                    <img src="resources/images/main/featured-works/book.png" alt="Book">
+                </div>
             </div>
         </div>
         <div class="team">
@@ -59,18 +71,24 @@
                         <p class="employee__info">Info</p>
                         <ul class="employee__links">
                             <li>
-                                <a href="#"><img src="resources/images/main/small-team/icon-facebook.svg"
-                                        alt="Facebook"></a>
+                                <a href="#">
+                                    <img src="resources/images/main/small-team/icon-facebook.svg" alt="Facebook">
+                                </a>
                             </li>
                             <li>
-                                <a href="#"><img src="resources/images/main/small-team/icon-twitter.svg"
-                                        alt="Twitter"></a>
+                                <a href="#">
+                                    <img src="resources/images/main/small-team/icon-twitter.svg" alt="Twitter">
+                                </a>
                             </li>
                             <li>
-                                <a href="#"><img src="resources/images/main/small-team/icon-site.svg" alt="Site"></a>
+                                <a href="#">
+                                    <img src="resources/images/main/small-team/icon-site.svg" alt="Site">
+                                </a>
                             </li>
                             <li>
-                                <a href="#"><img src="resources/images/main/small-team/icon-mail.svg" alt="Mail"></a>
+                                <a href="#">
+                                    <img src="resources/images/main/small-team/icon-mail.svg" alt="Mail">
+                                </a>
                             </li>
                         </ul>
                     </div>
@@ -83,18 +101,24 @@
                             WordPress, JQuery.</p>
                         <ul class="employee__links">
                             <li>
-                                <a href="#"><img src="resources/images/main/small-team/icon-facebook.svg"
-                                        alt="Facebook"></a>
+                                <a href="#">
+                                    <img src="resources/images/main/small-team/icon-facebook.svg" alt="Facebook">
+                                </a>
                             </li>
                             <li>
-                                <a href="#"><img src="resources/images/main/small-team/icon-twitter.svg"
-                                        alt="Twitter"></a>
+                                <a href="#">
+                                    <img src="resources/images/main/small-team/icon-twitter.svg" alt="Twitter">
+                                </a>
                             </li>
                             <li>
-                                <a href="#"><img src="resources/images/main/small-team/icon-site.svg" alt="Site"></a>
+                                <a href="#">
+                                    <img src="resources/images/main/small-team/icon-site.svg" alt="Site">
+                                </a>
                             </li>
                             <li>
-                                <a href="#"><img src="resources/images/main/small-team/icon-mail.svg" alt="Mail"></a>
+                                <a href="#">
+                                    <img src="resources/images/main/small-team/icon-mail.svg" alt="Mail">
+                                </a>
                             </li>
                         </ul>
                     </div>
@@ -106,18 +130,24 @@
                         <p class="employee__info">Info</p>
                         <ul class="employee__links">
                             <li>
-                                <a href="#"><img src="resources/images/main/small-team/icon-facebook.svg"
-                                        alt="Facebook"></a>
+                                <a href="#">
+                                    <img src="resources/images/main/small-team/icon-facebook.svg" alt="Facebook">
+                                </a>
                             </li>
                             <li>
-                                <a href="#"><img src="resources/images/main/small-team/icon-twitter.svg"
-                                        alt="Twitter"></a>
+                                <a href="#">
+                                    <img src="resources/images/main/small-team/icon-twitter.svg" alt="Twitter">
+                                </a>
                             </li>
                             <li>
-                                <a href="#"><img src="resources/images/main/small-team/icon-site.svg" alt="Site"></a>
+                                <a href="#">
+                                    <img src="resources/images/main/small-team/icon-site.svg" alt="Site">
+                                </a>
                             </li>
                             <li>
-                                <a href="#"><img src="resources/images/main/small-team/icon-mail.svg" alt="Mail"></a>
+                                <a href="#">
+                                    <img src="resources/images/main/small-team/icon-mail.svg" alt="Mail">
+                                </a>
                             </li>
                         </ul>
                     </div>
@@ -129,18 +159,24 @@
                         <p class="employee__info">Info</p>
                         <ul class="employee__links">
                             <li>
-                                <a href="#"><img src="resources/images/main/small-team/icon-facebook.svg"
-                                        alt="Facebook"></a>
+                                <a href="#">
+                                    <img src="resources/images/main/small-team/icon-facebook.svg" alt="Facebook">
+                                </a>
                             </li>
                             <li>
-                                <a href="#"><img src="resources/images/main/small-team/icon-twitter.svg"
-                                        alt="Twitter"></a>
+                                <a href="#">
+                                    <img src="resources/images/main/small-team/icon-twitter.svg" alt="Twitter">
+                                </a>
                             </li>
                             <li>
-                                <a href="#"><img src="resources/images/main/small-team/icon-site.svg" alt="Site"></a>
+                                <a href="#">
+                                    <img src="resources/images/main/small-team/icon-site.svg" alt="Site">
+                                </a>
                             </li>
                             <li>
-                                <a href="#"><img src="resources/images/main/small-team/icon-mail.svg" alt="Mail"></a>
+                                <a href="#">
+                                    <img src="resources/images/main/small-team/icon-mail.svg" alt="Mail">
+                                </a>
                             </li>
                         </ul>
                     </div>
@@ -152,18 +188,24 @@
                         <p class="employee__info">Info</p>
                         <ul class="employee__links">
                             <li>
-                                <a href="#"><img src="resources/images/main/small-team/icon-facebook.svg"
-                                        alt="Facebook"></a>
+                                <a href="#">
+                                    <img src="resources/images/main/small-team/icon-facebook.svg" alt="Facebook">
+                                </a>
                             </li>
                             <li>
-                                <a href="#"><img src="resources/images/main/small-team/icon-twitter.svg"
-                                        alt="Twitter"></a>
+                                <a href="#">
+                                    <img src="resources/images/main/small-team/icon-twitter.svg" alt="Twitter">
+                                </a>
                             </li>
                             <li>
-                                <a href="#"><img src="resources/images/main/small-team/icon-site.svg" alt="Site"></a>
+                                <a href="#">
+                                    <img src="resources/images/main/small-team/icon-site.svg" alt="Site">
+                                </a>
                             </li>
                             <li>
-                                <a href="#"><img src="resources/images/main/small-team/icon-mail.svg" alt="Mail"></a>
+                                <a href="#">
+                                    <img src="resources/images/main/small-team/icon-mail.svg" alt="Mail">
+                                </a>
                             </li>
                         </ul>
                     </div>
@@ -175,18 +217,24 @@
                         <p class="employee__info">Info</p>
                         <ul class="employee__links">
                             <li>
-                                <a href="#"><img src="resources/images/main/small-team/icon-facebook.svg"
-                                        alt="Facebook"></a>
+                                <a href="#">
+                                    <img src="resources/images/main/small-team/icon-facebook.svg" alt="Facebook">
+                                </a>
                             </li>
                             <li>
-                                <a href="#"><img src="resources/images/main/small-team/icon-twitter.svg"
-                                        alt="Twitter"></a>
+                                <a href="#">
+                                    <img src="resources/images/main/small-team/icon-twitter.svg" alt="Twitter">
+                                </a>
                             </li>
                             <li>
-                                <a href="#"><img src="resources/images/main/small-team/icon-site.svg" alt="Site"></a>
+                                <a href="#">
+                                    <img src="resources/images/main/small-team/icon-site.svg" alt="Site">
+                                </a>
                             </li>
                             <li>
-                                <a href="#"><img src="resources/images/main/small-team/icon-mail.svg" alt="Mail"></a>
+                                <a href="#">
+                                    <img src="resources/images/main/small-team/icon-mail.svg" alt="Mail">
+                                </a>
                             </li>
                         </ul>
                     </div>
