--- a/index.html
+++ b/index.html
@@ -277,12 +277,14 @@
                     </form>
                 </div>
                 <div class="contact__info">
-                    <p class="contact__line">Main office: Independence Avenue, 177 Minsk, Belarus</p>
-                    <p class="contact__line">Phone: +375(xx) xxx-xx-xx</p>
-                    <p class="contact__line">Fax: +375(xx) xxx-xx-xx</p>
-                    <p><br></p>
-                    <p class="contact__line">Web: https://github.com/</p>
-                    <p class="contact__line">E-mail: example@gmail.com</p>
+                    <div class="contact__credits">
+                        <p class="contact__line">Main office: Independence Avenue, 177 Minsk, Belarus</p>
+                        <p class="contact__line">Phone: +375(xx) xxx-xx-xx</p>
+                        <p class="contact__line">Fax: +375(xx) xxx-xx-xx</p>
+                        <p class="contact__line"><br /></p>
+                        <p class="contact__line">Web: https://github.com/</p>
+                        <p class="contact__line">E-mail: example@gmail.com</p>
+                    </div>
                     <div class="contact__map">
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2348.1627677829974!2d27.68475807845857!3d53.94661666806559!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46dbcecac2e9bfbf%3A0x4392476c7a6fe0f6!2sprasp.%20Niezalie%C5%BEnasci%20177%2C%20Minsk%2C%20Minskaja%20voblas%C4%87!5e0!3m2!1sen!2sby!4v1707828290293!5m2!1sen!2sby"
