Fix contact form after code review
By @DaizuBTW

--- a/index.html
+++ b/index.html
@@ -85,7 +85,14 @@
                         <div class="employee__about">
                             <img class="employee__arrow" src="resources/images/main/small-team/arrow.svg" alt="Arrow">
                             <p class="employee__name">Name <span class="employee__position">/ Position</span></p>
-                            <p class="employee__info">Info</p>
+                            <p class="employee__info">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt
+                                voluptatibus sed repudiandae quidem accusamus exercitationem dolorum necessitatibus
+                                culpa, quis tenetur nulla est dolore debitis placeat architecto quia! Quasi pariatur
+                                amet reiciendis, iste minus accusamus dignissimos incidunt laboriosam magni eveniet
+                                maiores ad, aliquam magnam, id corrupti voluptates! Tempora repudiandae accusantium
+                                distinctio voluptatibus impedit vitae, harum fugit debitis perferendis temporibus
+                                doloremque id illo officiis, officia voluptatem explicabo ducimus eos suscipit adipisci
+                                reiciendis.</p>
                             <ul class="employee__links">
                                 <li>
                                     <a href="#">
