Add message after contact form button click

--- a/index.html
+++ b/index.html
@@ -276,11 +276,11 @@
             <div class="contact__container container">
                 <div class="contact__feedback">
                     <form action="" class="contact__form">
-                        <input class="contact__input" type="text" placeholder="Name*">
-                        <input class="contact__input" type="text" placeholder="+375 (xx) xxx-xx-xx">
-                        <input class="contact__input" type="text" placeholder="Email*">
+                        <input class="contact__name contact__input" type="text" placeholder="Name*">
+                        <input class="contact__phone contact__input" type="text" placeholder="+375 (xx) xxx-xx-xx">
+                        <input class="contact__email contact__input" type="text" placeholder="Email*">
                         <textarea class="contact__message" placeholder="Message*"></textarea>
-                        <button class="contact__submit">Send message</button>
+                        <button type="submit" class="contact__submit">Send message</button>
                     </form>
                 </div>
                 <div class="contact__info">
@@ -341,6 +341,7 @@
             </ul>
         </div>
     </footer>
+    <script src="/resources/js/form-processing.js"></script>
 </body>
 
 </html>
