Fix contact form fields after demo
Also correct the event for beforeSend function

--- a/index.html
+++ b/index.html
@@ -278,10 +278,10 @@
             <div class="contact__container container">
                 <div class="contact__feedback">
                     <form action="" class="contact__form">
-                        <input class="contact__name contact__input" type="text" placeholder="Name*">
-                        <input class="contact__phone contact__input" type="text" placeholder="+375 (xx) xxx-xx-xx">
-                        <input class="contact__email contact__input" type="text" placeholder="Email*">
-                        <textarea class="contact__message" placeholder="Message*"></textarea>
+                        <input class="contact__name contact__input" type="text" placeholder="Name*" required>
+                        <input class="contact__phone contact__input" type="tel" placeholder="+375 (xx) xxx-xx-xx">
+                        <input class="contact__email contact__input" type="email" placeholder="Email*" required>
+                        <textarea class="contact__message" placeholder="Message*" required></textarea>
                         <button type="submit" class="contact__submit">Send message</button>
                     </form>
                 </div>
