--- a/index.html
+++ b/index.html
@@ -279,7 +279,8 @@
                 <div class="contact__feedback">
                     <form action="" class="contact__form">
                         <input class="contact__name contact__input" type="text" placeholder="Name*" required>
-                        <input class="contact__phone contact__input" type="tel" placeholder="+375 (xx) xxx-xx-xx">
+                        <input class="contact__phone contact__input" type="tel" placeholder="+375 (xx) xxx-xx-xx"
+                            pattern="^\+375[\s\-]?\(?(15|16|17|21|22|23|25|29|33|44)\)?[\s\-]?\d{3}[\s\-]?\d{2}[\s\-]?\d{2}$">
                         <input class="contact__email contact__input" type="email" placeholder="Email*" required>
                         <textarea class="contact__message" placeholder="Message*" required></textarea>
                         <button type="submit" class="contact__submit">Send message</button>
